# clap_doc_generator

./: Cargo.toml  readme.md
src/: arguments.rs  main.rs
src/generator/: attr_parser.rs  command_tree.rs  extraction.rs  mod.rs  model_command.rs  model_parsed.rs  render_markdown.rs  source_analysis.rs  type_helper.rs  utils.rs
src/scanner/: datamodel.rs  find.rs  mod.rs
